Code/java/compress/error.txt
compress.java:24: warning: [unchecked] unchecked call to apply(V,M) as a member of the raw type funcPtr
     return func.apply(v, m);
                      ^
  where V,E,M are type-variables:
    V extends Vector<E> declared in interface funcPtr
    E extends Object declared in interface funcPtr
    M extends VectorMask<E> declared in interface funcPtr
compress.java:24: warning: [unchecked] unchecked conversion
     return func.apply(v, m);
                      ^
  required: Vector<Integer>
  found:    Vector
compress.java:29: warning: [unchecked] unchecked method invocation: method fromLong in class VectorMask is applied to given types
      VectorMask<Integer> m = VectorMask.fromLong(SPECIES, 1365);
                                                 ^
  required: VectorSpecies<E>,long
  found:    VectorSpecies,int
  where E is a type-variable:
    E extends Object declared in method <E>fromLong(VectorSpecies<E>,long)
compress.java:29: warning: [unchecked] unchecked conversion
      VectorMask<Integer> m = VectorMask.fromLong(SPECIES, 1365);
                                                  ^
  required: VectorSpecies<E>
  found:    VectorSpecies
  where E is a type-variable:
    E extends Object declared in method <E>fromLong(VectorSpecies<E>,long)
compress.java:29: warning: [unchecked] unchecked conversion
      VectorMask<Integer> m = VectorMask.fromLong(SPECIES, 1365);
                                                 ^
  required: VectorMask<Integer>
  found:    VectorMask
compress.java:30: error: incompatible types: invalid method reference
      Vector<Integer> r = compress(v, m, compress::compressHelper);
                                         ^
    incompatible types: Vector cannot be converted to IntVector
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
1 error
5 warnings
